Change claim signature
Removes the first required TerritoryIdentifier so that empty arrays can be provided, to support the case that 100% of territories are automatically chosen